[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font/UbuntuMonoFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Interfaz/VotingScript.gd" type="Script" id=2]
[ext_resource path="res://Interfaz/images/ivoted.png" type="Texture" id=3]
[ext_resource path="res://Interfaz/StyleBox.tres" type="StyleBox" id=4]
[ext_resource path="res://Interfaz/StyleBoxPressed.tres" type="StyleBox" id=5]
[ext_resource path="res://Interfaz/StyleBoxHover.tres" type="StyleBox" id=6]

[node name="Voting" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Button1" type="Button" parent="."]
self_modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 49.0228
margin_top = -233.633
margin_right = 371.023
margin_bottom = -161.633
rect_pivot_offset = Vector2( 72.1453, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ivoted" type="Sprite" parent="Button1"]
visible = false
position = Vector2( 13.373, 35.995 )
rotation = 0.153589
scale = Vector2( 0.646819, 0.646819 )
texture = ExtResource( 3 )

[node name="Button2" type="Button" parent="."]
self_modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 47.8336
margin_top = -141.591
margin_right = 369.834
margin_bottom = -69.5907
rect_pivot_offset = Vector2( 72.1453, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ivoted" type="Sprite" parent="Button2"]
visible = false
position = Vector2( 14.5622, 35.0259 )
rotation = -0.171042
scale = Vector2( 0.646819, 0.646819 )
texture = ExtResource( 3 )

[node name="Button3" type="Button" parent="."]
self_modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 49.0228
margin_top = -47.3039
margin_right = 371.023
margin_bottom = 24.6961
rect_pivot_offset = Vector2( 72.1453, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ivoted" type="Sprite" parent="Button3"]
visible = false
position = Vector2( 13.373, 36.9313 )
rotation = 0.413643
scale = Vector2( 0.646819, 0.646819 )
texture = ExtResource( 3 )

[node name="Button4" type="Button" parent="."]
self_modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 49.0228
margin_top = 50.3503
margin_right = 371.023
margin_bottom = 122.35
rect_pivot_offset = Vector2( 72.1453, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ivoted" type="Sprite" parent="Button4"]
visible = false
position = Vector2( 13.373, 37.662 )
rotation = -0.116937
scale = Vector2( 0.646819, 0.646819 )
texture = ExtResource( 3 )

[node name="Button5" type="Button" parent="."]
self_modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 49.0228
margin_top = 158.107
margin_right = 371.023
margin_bottom = 230.107
rect_pivot_offset = Vector2( 72.1453, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ivoted" type="Sprite" parent="Button5"]
visible = false
position = Vector2( 13.373, 37.0343 )
scale = Vector2( 0.646819, 0.646819 )
texture = ExtResource( 3 )

[node name="Button6" type="Button" parent="."]
self_modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -357.308
margin_top = -233.633
margin_right = -35.3083
margin_bottom = -161.633
rect_pivot_offset = Vector2( 72.1453, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ivoted" type="Sprite" parent="Button6"]
visible = false
position = Vector2( 309.271, 37.0665 )
scale = Vector2( 0.646819, 0.646819 )
texture = ExtResource( 3 )

[node name="Button7" type="Button" parent="."]
self_modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -357.308
margin_top = -141.591
margin_right = -35.3083
margin_bottom = -69.5907
rect_pivot_offset = Vector2( 72.1453, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ivoted" type="Sprite" parent="Button7"]
visible = false
position = Vector2( 309.271, 34.0335 )
rotation = 0.670206
scale = Vector2( 0.646819, 0.646819 )
texture = ExtResource( 3 )

[node name="Button8" type="Button" parent="."]
self_modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -357.308
margin_top = -47.3039
margin_right = -35.3083
margin_bottom = 24.6961
rect_pivot_offset = Vector2( 72.1453, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ivoted" type="Sprite" parent="Button8"]
visible = false
position = Vector2( 309.271, 39.4923 )
rotation = -0.155334
scale = Vector2( 0.646819, 0.646819 )
texture = ExtResource( 3 )

[node name="Button9" type="Button" parent="."]
self_modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -357.308
margin_top = 50.3503
margin_right = -35.3083
margin_bottom = 122.35
rect_pivot_offset = Vector2( 72.1453, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ivoted" type="Sprite" parent="Button9"]
visible = false
position = Vector2( 309.271, 39.8384 )
rotation = 0.0349066
scale = Vector2( 0.646819, 0.646819 )
texture = ExtResource( 3 )

[node name="Button10" type="Button" parent="."]
self_modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -357.308
margin_top = 158.107
margin_right = -35.3083
margin_bottom = 230.107
rect_pivot_offset = Vector2( 72.1453, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ivoted" type="Sprite" parent="Button10"]
visible = false
position = Vector2( 309.27, 37.3266 )
rotation = -0.141372
scale = Vector2( 0.646819, 0.646819 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -84.5
margin_top = 10.1022
margin_right = 84.5
margin_bottom = 36.1022
rect_pivot_offset = Vector2( 107.997, 26 )
custom_fonts/font = ExtResource( 1 )
text = "VOTE A PLAYER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VotesRemaining" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -191.65
margin_top = 544.056
margin_right = 172.35
margin_bottom = 570.056
rect_pivot_offset = Vector2( 107.997, 26 )
custom_fonts/font = ExtResource( 1 )
text = "10 players to vote remaining"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Button10" to="." method="_on_Button10_pressed"]
